Complete basic user features
Implement uploading and deleting avatar
Implement getting a user by username
Implement editing a profile (name and bio)
